# qs-timew

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  package.json  qmldir  setup.sh
docs/: api-reference.md  changelog.md  contributing.md  installation.md  integration-guide.md  migration-guide.md  performance.md  standalone-widget-guide.md  testing.md  troubleshooting.md  usage-examples.md
examples/: BasicWidget.qml  CompleteExample.qml  MinimalExample.qml  QuickshellIntegration.qml  StandaloneExample.qml
src/components/: IntegrationComponent.qml  PopupManager.qml  StyledPopup.qml  TagEditPopup.qml  TagInputPopup.qml  ThemeManager.qml
src/integration/: IntegrationComponent.qml
src/services/: TimewarriorService.qml
src/widgets/: TimewarriorWidget.qml
tests/: README.md  TestRunner.qml  TestUtils.qml  test-config.json
tests/integration/: TagEditWorkflowTests.qml
tests/module/: ModuleImportTests.qml
tests/performance/: TagUpdatePerformanceTests.qml
tests/unit/: TimewarriorServiceTagEditTests.qml
tests/validation/: DataIntegrityTests.qml  StandaloneWidgetTest.qml
